Search functionality improvements
Established functionality for adding new elements to search result area and fixed the backend search code.

--- a/index.html
+++ b/index.html
@@ -74,18 +74,7 @@
                     </div>
                 </form>
             </div>
-            <div class="searchresults">
-                <div class="row result">
-                    <div class="col-3">
-                        <h1>Result 1</h1>
-                    </div>
-                    <div class="col-4">
-                        Description of Result 1.
-                    </div>
-                    <div class="col-4">
-                        Indications and contras of Result 1
-                    </div>
-                </div>
+            <div id="searchresults">
             </div>
         </div>
     </div>
