--- a/index.html
+++ b/index.html
@@ -75,6 +75,10 @@
                 </form>
             </div>
             <div id="searchresults">
+                <div class="row result">
+                    <div class="col-3"><h1>'+f.name+'</h1></div>
+                    <div class="col-4">'+f.desc+'</div>
+                    <div class="col-4">'+f.indc.desc+'</div></div>
             </div>
         </div>
     </div>
