--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="description" content="EMScyclopedia">
     <meta name="author" content="spaghety">
+    <meta http-equiv=”Permissions-Policy” content=”interest-cohort=()”>
     <script src="./bootstrap-5.3.0-dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.23/angular.min.js"></script>
     <script src="jquery.min.js"></script>
@@ -75,15 +76,11 @@
                 </form>
             </div>
             <div id="searchresults">
-                <div class="row result">
-                    <div class="col-3"><h1>'+f.name+'</h1></div>
-                    <div class="col-4">'+f.desc+'</div>
-                    <div class="col-4">'+f.indc.desc+'</div></div>
             </div>
         </div>
     </div>
         <div class="footer">
-            <p>EMScyclopedia &copy; 2019</p>
+            <p>EMScyclopedia &copy; 2023</p>
         </div>
 </body>
 </html>
